--- a/coherence/graphs/bitalino.yaml
+++ b/coherence/graphs/bitalino.yaml
@@ -4,12 +4,12 @@ graphs:
     nodes:
 
     # Bitalino driver
-    # -------------------
+    # ---------------
     - id: bitalino
       module: timeflux_bitalino.nodes.driver
       class: Bitalino
       params:
-        port: /dev/tty.BITalino-19-95-Bluetoot
+        port: /dev/tty.BITalino-02-44
         rate: 1000
         sensors:
           A1: ECG
@@ -30,15 +30,10 @@ graphs:
       params:
         topic: raw
 
-    - id: display
-      module: timeflux.nodes.debug
-      class: Display
     edges:
      - source: bitalino
        target: select
      - source: select
        target: pub_raw 
-       
-    #  - source: select
-    #    target: display
+
     rate: 0
