--- a/neurofeedback/bands/graphs/bitalino.yaml
+++ b/neurofeedback/bands/graphs/bitalino.yaml
@@ -4,18 +4,18 @@ graphs:
     nodes:
 
     # Bitalino driver
-    # -------------------
+    # ---------------
     - id: bitalino
       module: timeflux_bitalino.nodes.driver
       class: Bitalino
       params:
-        port: /dev/tty.BITalino-19-95-Bluetoot
+        port: /dev/tty.BITalino-02-44
         rate: 1000
         sensors:
           A1: EEG
 
     # Select EEG channel
-    # -------------------
+    # ------------------
     - id: select
       module: timeflux.nodes.query
       class: LocQuery
@@ -39,6 +39,7 @@ graphs:
     - id: display
       module: timeflux.nodes.debug
       class: Display
+
     edges:
      - source: bitalino
        target: select
