--- a/roshambo/graphs/replay.yaml
+++ b/roshambo/graphs/replay.yaml
@@ -1,8 +1,9 @@
 graphs:
   - id: replay
     nodes:
+
       # Replay an HDF5
-      # ---------------
+      # --------------
       - id: replay
         module: timeflux.nodes.hdf5
         class: Replay
@@ -21,15 +22,15 @@ graphs:
           key: [A1_EMG, A2_EMG]
 
       # Publish 
-      # --------
-      - id: pub # /!\ make sure you have a Broker amongst your graphs!  /!\
+      # -------
+      - id: pub
         module: timeflux.nodes.zmq
         class: Pub
         params:
           topic: raw
 
       # For debug purpose
-      # ------------------
+      # -----------------
       - id: display
         module: timeflux.nodes.debug
         class: Display
@@ -41,4 +42,5 @@ graphs:
         target: pub
       # - source: select
       #   target: display
+
     rate: 10  # this graph will refresh 10 times per second
