--- a/roshambo/main.yaml
+++ b/roshambo/main.yaml
@@ -3,15 +3,15 @@ import:
 
   # Input graphs
   # ------------
-  - graphs/random.yaml # uncomment this line to run with random data
-  # - graphs/replay.yaml # comment this line to run with bitalino device
-  # - graphs/bitalino.yaml # comment this line to run on replayed data
+  - graphs/random.yaml # random data
+  # - graphs/replay.yaml # pre-recorded data
+  # - graphs/bitalino.yaml # BITalino device
 
   # Biomarkers and UI
   # -----------------
   - graphs/biomarkers.yaml
   - graphs/ui.yaml
-  # - graphs/save.yaml # un comment this graph to save the data in HDF5
+  # - graphs/save.yaml # save the data in HDF5
 
 graphs:
 
