Filter data from LSL stream

--- a/oddball/oddball/graphs/lsl.yaml
+++ b/oddball/oddball/graphs/lsl.yaml
@@ -11,12 +11,28 @@ graphs:
         prop: name
         value: my_lsl_stream # Set the name of the LSL stream here
         sync: local # Set to "local" if the LSL stream originates from the same computer, or "network" otherwise
-    - id: publish
+    - id: bandpass
+      module: timeflux_dsp.nodes.filters
+      class: IIRFilter
+      params:
+        filter_type: bandpass
+        frequencies: [1, 40]
+        order: 3
+    - id: publish_raw
       module: timeflux.nodes.zmq
       class: Pub
       params:
         topic: raw
+    - id: publish_filtered
+      module: timeflux.nodes.zmq
+      class: Pub
+      params:
+        topic: filtered
     edges:
       - source: data
-        target: publish
+        target: publish_raw
+      - source: data
+        target: bandpass
+      - source: bandpass
+        target: publish_filtered
     rate: 10
